src/plugins/home/public/application/components/_home.scss
// Local page vars
$homePageHeaderHeight: $euiSize * 8;
$homePageWidth: 1200px;

.homPageHeader {
  height: $homePageHeaderHeight;
  margin: 0 auto;
  max-width: $homePageWidth;
  padding: $euiSizeXL $euiSize 0;
}

.homPageContainer {
  min-height: calc(100vh - #{$homePageHeaderHeight});
  background-color: $euiColorEmptyShade;
  border-top: 1px solid $euiColorLightShade;
}

.homPage {
  display: flex;
  max-width: $homePageWidth;
  margin: 0 auto;
  padding: 0 $euiSize $euiSizeXL;
  background-color: transparent;
}

.homHome__synopsisItem {
  max-width: 50%;
}

@include euiBreakpoint('xs', 's', 'm') {
  .homHome__synopsisItem {
    flex-basis: 100% !important;
  }
}

