Fixed home page header links spacing

--- a/src/plugins/home/public/application/components/_home.scss
+++ b/src/plugins/home/public/application/components/_home.scss
@@ -16,7 +16,6 @@ $homePageWidth: 1200px;
 }
 
 .homPage {
-  display: flex;
   max-width: $homePageWidth;
   margin: 0 auto;
   padding: 0 $euiSize $euiSizeXL;
